* [Fixes] Code cleanup